# ki-wmc

./: GettingStarted.md  ProjectHome.md  init_project.sh  roc.gp
src/: CMakeLists.txt  Collect-main.cxx  Distribution-main.cxx  LASVM.h  LASVM.txx  SVM.cpp  SVM.h  Scale-main.cxx  Segment-main.cxx  Test-main.cxx  Train-main.cxx  buildinfo.h  itkImageCutoffCalc.h  itkImageCutoffCalc.txx  itkImageNeighborLinearAccess.h  itkInsideBinaryBallStructuringElement.h  itkInsideBinaryBallStructuringElement.txx  itkInsideEllipsoidInteriorExteriorSpatialFunction.h  itkInsideEllipsoidInteriorExteriorSpatialFunction.txx  itkNeighborhoodCollectorImageFilter.h  itkNeighborhoodCollectorImageFilter.txx  itkProgressWatcher.h  itkRobustOneScale.h  itkRobustOneScale.txx  itkSVMImageFilter.h  itkSVMImageFilter.hxx  util.cpp  util.h
src/lasvm-source/: CMakeLists.txt  Makefile  la_svm.cpp  lasvm.c  lasvm.h
src/scripts/: CollectDB.sh  DS_Collect.sh  PlotROC.sh  SepTestTrain.sh  TestDB.sh  TrainDB.sh  do_ALL.sh  sepTestTrain.sh  test.sh
